--- a/Ruby/2024-10-27.md
+++ b/Ruby/2024-10-27.md
@@ -1,5 +1,15 @@
-
-- ! me mogu nista platiti preko mobitele
-	- niti mogu prebaciti novac
+- ! ne mogu nista **platiti** preko **mobitela**
+	- niti mogu prebaciti **novac** 💸
 - ! ne mogu se ulogirati na poslu
 - ...
+
+---
+
+- povezivanje s `Faksom`
+	- [[faks|faks]]
+- [x] [[review Hugama studio]]
+- [x] [[poslati mailove za upis na predmete]]
+
+# Day planner 
+
+- [x] 21:00 - 23:00 Obsidian work
