--- a/Ruby/2024-11-10.md
+++ b/Ruby/2024-11-10.md
@@ -1,3 +1,12 @@
 # Day planner
 
-- [ ] 11:30 - 12:10 [[Life/Faks/Predmeti/Matematika/Matematika]]
+- [x] 11:30 - 12:10 [[Life/Faks/Predmeti/Matematika/Matematika]]
+- [ ] 18:50 - 20:00 [[srediti troskovnik]] #task
+
+2u + 3v
+cos60
+
+c^2 = a^2 + b^2 - 2cosy  = 4 + 9 -2(2*3)cos120
+		= 4 + 9 - 6 * 0.5
+		= 13-3 = 10
+c = sqrt(10)
