--- a/Ruby/2024-11-10.md
+++ b/Ruby/2024-11-10.md
@@ -1,7 +1,7 @@
 # Day planner
 
 - [x] 11:30 - 12:10 [[Life/Faks/Predmeti/Matematika/Matematika]]
-- [ ] 18:50 - 20:00 [[srediti troskovnik]] #task
+- [x] 18:50 - 20:00 [[srediti troskovnik]] #task ✅ 2024-11-13
 
 2u + 3v
 cos60
