organize files in Ruby

--- a/Ruby/days/2024/2024-11-02.md
+++ b/Ruby/days/2024/2024-11-02.md
@@ -5,4 +5,4 @@
 	- [x] porez
 - [x] #task Obsidian - organize tasks with the [[Tasks plugin]] ✅ 2024-11-05
 - [x] #task another one 📅 2024-11-03 ✅ 2024-11-05
-- [x] #task [[use the timeline and daily tasks ✅]] ⏫ ➕ 2024-11-02 ✅ 2024-11-05
+- [x] #task [[Efforts/Dev/tasks/use the timeline and daily tasks ✅]] ⏫ ➕ 2024-11-02 ✅ 2024-11-05
