--- a/Ruby/days/2024-11-27.md
+++ b/Ruby/days/2024-11-27.md
@@ -2,7 +2,7 @@
 
 Sutra u **12:50** - fizio 
 
-- [ ] #task [[study more of obsidian ]]
+- [x] #task [[study more of obsidian ]] ✅ 2025-01-09
 - [ ] …
  
 /storage/emulated/0/Documents/diamond-mine
