--- a/Ruby/days/2024-12-10.md
+++ b/Ruby/days/2024-12-10.md
@@ -2,7 +2,7 @@ Ostavljam Vam podatke za uplatu:
 HR5823400093218312812
 Ana-Marija Buntić, Zagreb
 
-- [ ] #task pitati tatu za vešmašinu i stajanje na mjestu
+- [x] #task pitati tatu za vešmašinu i stajanje na mjestu ✅ 2025-01-09
 [[avenija okusa]]
 
 ## shopping
